Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -281,6 +281,36 @@
     \subsection{External Interface Requirements}
         
         \subsubsection{User Interfaces}
+        \begin{figure}[!htpb]
+    	\centering
+    	\includegraphics[height=50mm]{images/mockups/Login_Registration.png}
+    	\includegraphics[height=50mm]{images/mockups/RegistrationForm.png}
+    	\includegraphics[height=50mm]{images/mockups/ThirdPartyRegistration.png}
+        \end{figure}
+        
+        \begin{figure}[!htpb]
+    	\centering
+    	\includegraphics[height=50mm]{images/mockups/HomePage.png}
+    	\includegraphics[height=50mm]{images/mockups/IndividualProfile.png}
+    	\includegraphics[height=50mm]{images/mockups/ThirdPartyProfile.png}
+        \end{figure}
+        
+        \begin{figure}[!htpb]
+    	\centering
+    	\includegraphics[height=50mm]{images/mockups/Requests.png}
+    	\includegraphics[height=50mm]{images/mockups/GroupRequest.png}
+    	\includegraphics[height=50mm]{images/mockups/ManageRequests.png}
+    	\includegraphics[height=50mm]{images/mockups/ViewData.png}
+    	\includegraphics[height=50mm]{images/mockups/ViewData2.png}
+        \end{figure}
+        
+        \begin{figure}[!htpb]
+    	\centering
+    	\includegraphics[height=50mm]{images/mockups/RunManager.png}
+    	\includegraphics[height=50mm]{images/mockups/RunCreate.png}
+    	\includegraphics[height=50mm]{images/mockups/ViewMap.png}
+    	\includegraphics[height=50mm]{images/mockups/DefineTrack.png}
+        \end{figure}
         
         \subsubsection{Hardware Interfaces}
         The GPS system of the smartphone or the one of the external device (if connected) is needed in order to track customer's position.
